# Talk-to-Me

talk-to-me/: .env.example  .gitignore  README.md  pyproject.toml
talk-to-me/agents/: __init__.py  base.py  config.py  llm_factory.py
talk-to-me/agents/debater/: __init__.py  agent.json  server.py
talk-to-me/agents/explorer/: __init__.py  agent.json  server.py
talk-to-me/agents/philosopher/: __init__.py  agent.json  server.py
talk-to-me/agents/researcher/: agent.json  server.py
talk-to-me/agents/writer/: agent.json  server.py
talk-to-me/client/: chat_client.py
talk-to-me/config/: agents.yaml
